# todoist-rs

./: Cargo.toml  README.md
src/: cache.rs  lib.rs
src/command/: macros.rs  mod.rs
src/resource/: filter.rs  item.rs  label.rs  note.rs  notification.rs  project.rs  user.rs
src/types/: date.rs  error.rs
