[package]
name = "todoist"
version = "0.1.0"
authors = ["Ian Shehadeh <IanShehadeh2020@gmail.com>"]
license = "Apache-2.0 AND MIT"
homepage = "https://github.com/IanS5/todoist-rs"
repository = "https://github.com/IanS5/todoist-rs"
description = "Rust wrapper around the todoist sync API"
readme = "README.md"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
uuid = { version = "1.1.0", features = ["v4", "serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
chrono = "0.4"
clap = { version = "2.31.2", optional = true }
xdg = { version = "^2.1", optional = true }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "todoist"
path = "src/bin/main.rs"
required-features = ["binaries"]

[features]
binaries = ["clap", "xdg"]